INCLUDES = -I/usr/include\
           -I/usr/local/include\
           -I../except\
           -I../logostream\
           -I../md5

AM_LDFLAGS = -L/usr/lib\
             -L/usr/local/lib\
             @LIBS_ADD@

#noinst_PROGRAMS = example

#example_SOURCES = example.cc\
#                  iron.cc\
#        	  iron.h\
#          	  ment.hpp\
#           	  ../logostream/logostream.cc\
#                  ../logostream/logostream.hpp
