INCLUDES = -I/usr/include\
           -I/usr/local/include\
	   -I../logostream

AM_LDFLAGS = -L/usr/lib\
             -L/usr/local/lib\
             @LIBS_ADD@

#noinst_PROGRAMS = example

#example_SOURCES = example.cc\
#                  timeter.h\
#                  ../logostream/logostream.cc\
#                  ../logostream/logostream.hpp
