#libcxxdir = $(prefix)/html

#libcxx_DATA = doxygen.css\
#              doxygen.png\
#              index.html\
#              tab_b.gif\
#              tab_l.gif\
#              tab_r.gif\
#              tabs.css

all:
	@(echo Doxygen path = ${DOXYGEN})
	${DOXYGEN}
#	${MAKE} -C html install
#	${MAKE} -C html clean

clean:
	${MAKE} -C html clean
