INCLUDES = -I/usr/include\
           -I/usr/local/include\
           -I/usr/include\libcxx\
           -I/usr/local/include/libcxx\
           -I../../static\
           -I../md5

AM_LDFLAGS = -L/usr/lib\
             -L/usr/local/lib\
             -L/usr/lib/mysql\
             -L/usr/local/lib/mysql\
             -lmysqlclient\
             @LIBS_ADD@

#noinst_PROGRAMS = db_test # mc_example sqltest

#db_test_SOURCES = db_test.cc db_cli.hpp

#mc_example_SOURCES = mc_example.cc

#sqltest_SOURCES = sqltest.cc selquery.hpp